--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!-- home -->
 
 <section class="jumbotron text-center" id="home">
-    <img src="img/logo.png" alt="logo" width="200"
+    <img src="logo.png" alt="logo" width="200"
     clas="img-thumbnail">
     <h1 class="display-4">Selamat Datang</h1>
     <p class="lead">Masakan Ibu yang sangat enak, nagih dan lezat</p>
